--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    width: 800px;
+    margin: auto;
+}
+
+header {
+    background-color: #e579e6;
+    min-height: 70px;
+}
+
+section.up {
+    background-color: #e1d67a;
+    min-height: 200px;
+    margin: 10px 0;
+}
+
+section.down {
+    background-color: #0086ff;
+    min-height: 300px;
+}
+
+footer {
+    background-color: #8601fe;
+    min-height: 50px;
+    margin-top: 5px;
+}
