--- a/css/style.css
+++ b/css/style.css
@@ -14,19 +14,48 @@ header {
     min-height: 70px;
 }
 
+/*sezione "green" del main*/
 section.up {
     background-color: #e1d67a;
     min-height: 200px;
     margin: 10px 0;
 }
 
+/*sezione "lightblue" del main*/
 section.down {
     background-color: #0086ff;
-    min-height: 300px;
+    min-height: 400px;
 }
 
+.row {
+    background-color: #abcfe7;
+    min-height: 80px;
+    margin-bottom: 10px;
+}
+
+/*div contenitore per le colonne*/
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.col {
+    background-color: #abcfe7;
+    min-height: 300px;
+    float: left;
+}
+
+.col.left, .col.right {
+    width: 20%;
+}
+
+.col.middle {
+    width: calc(60% - 20px);
+    margin: 0 10px;
+}
 footer {
     background-color: #8601fe;
-    min-height: 50px;
+    min-height: 30px;
     margin-top: 5px;
 }
