--- a/css/style.css
+++ b/css/style.css
@@ -5,32 +5,32 @@
 }
 
 .container {
-    width: 800px;
+    max-width: 1280px;
     margin: auto;
 }
 
 header {
     background-color: #e579e6;
-    min-height: 70px;
+    min-height: 100px;
 }
 
 /*sezione "green" del main*/
 section.up {
     background-color: #e1d67a;
-    min-height: 200px;
-    margin: 10px 0;
+    min-height: 400px;
+    margin: 20px 0;
 }
 
 /*sezione "lightblue" del main*/
 section.down {
     background-color: #0086ff;
-    min-height: 400px;
+    min-height: 600px;
 }
 
 .row {
     background-color: #abcfe7;
     min-height: 80px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 /*div contenitore per le colonne*/
@@ -42,7 +42,7 @@ section.down {
 
 .col {
     background-color: #abcfe7;
-    min-height: 300px;
+    min-height: 490px;
     float: left;
 }
 
@@ -51,11 +51,11 @@ section.down {
 }
 
 .col.middle {
-    width: calc(60% - 20px);
-    margin: 0 10px;
+    width: calc(60% - 30px);
+    margin: 0 15px;
 }
 footer {
     background-color: #8601fe;
-    min-height: 30px;
-    margin-top: 5px;
+    min-height: 50px;
+    margin-top: 10px;
 }
